--- a/2023/.gitignore
+++ b/2023/.gitignore
@@ -523,4 +523,5 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,cmake,vim,visualstudio,visualstudiocode
 
-./build
+./build/
+build
